force-app/main/default/objects/pd_jp_20151124__AC_Prospect__c/pd_jp_20151124__AC_Prospect__c.object-meta.xml
<CustomObject>
    <label>MAPlusAC プロスペクト</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}{000000}</displayFormat>
        <label>プロスペクト名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>