force-app/main/default/objects/pd_jp_20151124__AC_Prospect__c/fields/ContactID__c.field-meta.xml
<CustomField>
    <fullName>ContactID__c</fullName>
    <formula>pd_jp_20151124__Contact__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>取引先担当者ID</label>
    <type>Text</type>
</CustomField>