force-app/main/default/objects/pd_jp_20151124__AC_Prospect__c/fields/LeadID__c.field-meta.xml
<CustomField>
    <fullName>LeadID__c</fullName>
    <formula>pd_jp_20151124__Lead__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>リードID</label>
    <type>Text</type>
</CustomField>