force-app/main/default/objects/pd_jp_20151124__AC_Prospect__c/fields/pd_jp_20151124__City__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__City__c</fullName>
    <label>市区町村</label>
    <length>255</length>
    <type>Text</type>
</CustomField>