force-app/main/default/objects/pd_jp_20151124__AC_Prospect__c/fields/pd_jp_20151124__Contact__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先責任者</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>MAPlusAC プロスペクト</relationshipLabel>
    <relationshipName>AcProspect</relationshipName>
    <type>Lookup</type>
</CustomField>