force-app/main/default/objects/pd_jp_20151124__AC_Prospect__c/fields/pd_jp_20151124__ConvertedAt__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__ConvertedAt__c</fullName>
    <label>コンバージョン日時</label>
    <type>DateTime</type>
</CustomField>