force-app/main/default/objects/pd_jp_20151124__AC_Prospect__c/fields/pd_jp_20151124__Country__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__Country__c</fullName>
    <label>国</label>
    <length>255</length>
    <type>Text</type>
</CustomField>