force-app/main/default/objects/pd_jp_20151124__AC_Prospect__c/fields/pd_jp_20151124__ProspectCreatedAt__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__ProspectCreatedAt__c</fullName>
    <label>Prospect作成日時</label>
    <type>DateTime</type>
</CustomField>