force-app/main/default/objects/pd_jp_20151124__AC_Prospect__c/fields/pd_jp_20151124__ProspectName__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__ProspectName__c</fullName>
    <label>名前</label>
    <length>255</length>
    <type>Text</type>
</CustomField>