force-app/main/default/objects/pd_jp_20151124__AC_Prospect__c/fields/pd_jp_20151124__score__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__score__c</fullName>
    <label>スコア</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>