force-app/main/default/objects/pd_jp_20151124__AC_Prospect__c/fields/pd_jp_20151124__SourceCampaignId__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__SourceCampaignId__c</fullName>
    <label>ソースキャンペーンID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>